@@ -1,3 +1,7 @@
+2014-02-19  Eric Botcazou  <ebotcazou@adacore.com>
+
+	* gnat.dg/opt31.adb: New test.
+
 2014-02-19  Rainer Orth  <ro@CeBiTec.Uni-Bielefeld.DE>
 
 	* gcc.dg/torture/pr60092.c: xfail execution on *-*-solaris2.11* at -O0.
